--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="logo-text">
                             <h1>IFCO Systems</h1>
-                            <p>Sistema Profissional de Reporte</p>
+                            <p>Sistema de Reporte Mercado Negro</p>
                         </div>
                     </div>
                 </div>
@@ -50,18 +50,7 @@
                         <span class="stat-label">Reportes Enviados</span>
                     </div>
                 </div>
-                <div class="stat-card">
-                    <div class="stat-icon">☁️</div>
-                    <div class="stat-content">
-                        <span class="stat-number" id="cloud-submissions">0</span>
-                        <span class="stat-label">Sincronizados</span>
-                    </div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-icon">💾</div>
-                    <div class="stat-content">
-                        <span class="stat-number" id="local-submissions">0</span>
-                        <span class="stat-label">Backup Local</span>
+               
                     </div>
                 </div>
             </div>
@@ -281,7 +270,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <span class="footer-logo">IFCO</span>
-                    <span class="footer-text">Sistema Profissional de Reporte</span>
+                    <span class="footer-text">Sistema de Reporte Mercado Negro</span>
                 </div>
                 <div class="footer-credits">
                     <p>Developed by <strong>Savio Sousa</strong></p>
